--- a/compose.yml
+++ b/compose.yml
@@ -7,11 +7,24 @@ services:
     ports:
       - 4000:4000
     env_file: ".env"
-
+    depends_on:
+      - database
+    restart: always
+    networks:
+      - admin
   database:
     image: mongo:4.4
+    restart: always
     env_file: ".env"
     volumes:
       - mongo-db:/data/db
+    ports:
+      - 27017:27017
+    networks:
+      - admin
 volumes:
   mongo-db:
+networks:
+  admin:
+    name: backend-net
+    external: true
